foundations/aws/us-east-2/sandbox/concourse-demo/cluster/config/concourse-web/_ytt_lib/concourse-web/rendered.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: concourse-web-web
    chart: concourse-13.0.0
    heritage: Helm
    release: concourse-web
  name: concourse-web-web
spec:
  ports:
  - name: atc
    port: 8080
    targetPort: atc
  selector:
    app: concourse-web-web
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: concourse-web-web
    chart: concourse-13.0.0
    heritage: Helm
    release: concourse-web
  name: concourse-web-web-worker-gateway
spec:
  ports:
  - name: worker-gateway
    port: 2222
    targetPort: tsa
  selector:
    app: concourse-web-web
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kbld.k14s.io/images: |
      - Metas:
        - Tag: 6.5.1
          Type: resolved
          URL: concourse/concourse:6.5.1
        URL: index.docker.io/concourse/concourse@sha256:11018d81dd2650e4bbf97cfcdb6448bf0b1fec7374c43cf23aaa1d31dac6cec6
  labels:
    app: concourse-web-web
    chart: concourse-13.0.0
    heritage: Helm
    release: concourse-web
  name: concourse-web-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: concourse-web-web
      release: concourse-web
  template:
    metadata:
      annotations:
        checksum/config: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/secrets: 06d06c33296574272b4c717db31a10cde92f673606762fce3c213d1f64606258
      labels:
        app: concourse-web-web
        release: concourse-web
    spec:
      containers:
      - args:
        - web
        image: index.docker.io/concourse/concourse@sha256:11018d81dd2650e4bbf97cfcdb6448bf0b1fec7374c43cf23aaa1d31dac6cec6
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/v1/info
            port: atc
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
        name: concourse-web-web
        ports:
        - containerPort: 8080
          name: atc
        - containerPort: 2222
          name: tsa
        - containerPort: 8079
          name: atc-debug
        readinessProbe:
          httpGet:
            path: /api/v1/info
            port: atc
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        volumeMounts:
        - mountPath: /concourse-keys
          name: concourse-keys
          readOnly: true
        - mountPath: /concourse-auth
          name: auth-keys
          readOnly: true
      serviceAccountName: concourse-web-web
      volumes:
      - name: concourse-keys
        secret:
          defaultMode: 256
          items:
          - key: host-key
            path: host_key
          - key: session-signing-key
            path: session_signing_key
          - key: worker-key-pub
            path: worker_key.pub
          secretName: concourse-web-web
      - name: auth-keys
        secret:
          defaultMode: 256
          items: null
          secretName: concourse-web-web
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-public
  labels:
    app: concourse-web-web
    chart: concourse-13.0.0
    heritage: Helm
    release: concourse-web
  name: concourse-web-web
spec:
  rules:
  - host: concourse.ci.gershman.io
    http:
      paths:
      - backend:
          serviceName: concourse-web-web
          servicePort: 8080
